--- a/.github/workflows/alert.yml
+++ b/.github/workflows/alert.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   alert:
-    runs-on: verja:latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
     - uses: digitalist-se/verja@master
